--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://SAIKAT12000448.github.io/snippea",
   "name": "snippea",
   "version": "0.1.0",
   "private": true,
@@ -25,11 +26,14 @@
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
+  
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -51,6 +55,8 @@
   },
   "devDependencies": {
     "daisyui": "^3.6.3",
+    "gh-pages": "^6.0.0",
     "tailwindcss": "^3.3.3"
   }
+  
 }
