--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
         "plugin:react/recommended"
     ],
     "parserOptions": {
-        "ecmaVersion": "latest",
+        "ecmaVersion": 2021,
         "sourceType": "module"
     },
     "plugins": [
@@ -19,6 +19,6 @@
         "jsx-a11y/img-redundant-alt": "off",
         "no-const-assign": "off",
         "jsx-a11y/anchor-is-valid": "off",
-        "react/prop-types": "off",
-      }
+        "react/prop-types": "off"
+    }
 }
